--- a/zudio/template/user/views_pro.html
+++ b/zudio/template/user/views_pro.html
@@ -8,9 +8,24 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="{{products.img.url}}" alt=""><br>
-    <a href="" class="btn btn-primary">Buy</a>
-    <a href="../add_to_cart/{{prodect.pk}}" class="btn btn-primary">Add to cart</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="{{products.img.url}}" alt="" style="width: 50%; height: 60%;">
+                <div class="mt-5">
+                    <a href="../buy_pro/{{products.pk}}" class="btn btn-outline-primary">Buy now</a>
+                    {% if cart %}
+                <a href="../cart_display" class="btn btn-outline-primary">Go to cart</a>
+                           {% else %}
+                        <a href="../add_cart/{{products.pk}}" class="btn btn-outline-primary">Add to cart</a>
+                {% endif %}
+                </div>
+            </div>
+            <div class="col-lg-7">
+                <h2>{{product.name}} </h2>
+                <h4>{{product.price}}</h4>
+                <h4>{{product.offer_price}}</h4>
+            </div>
 
 </body>
 </html>
