--- a/zudio/template/shop/shop_home.html
+++ b/zudio/template/shop/shop_home.html
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="booking">Bookings</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
