--- a/zudio/template/user/user_home.html
+++ b/zudio/template/user/user_home.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="cart_display">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="view_booking">Booking</a>
+                <a class="nav-link" href="view_booking">View Bookings</a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
